Improve code to incorporate the Python compressor and watermark script