@@ -6,33 +6,33 @@ import org.springframework.stereotype.Service;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URL;
 
 @Service
 public class PythonCaller {
 
     private static final Logger logger = LoggerFactory.getLogger(PythonCaller.class);
 
-    public final void callPythonScript(String inputFilePath, String outputFilePath) {
+    public final void callPythonScript(String inputFilePath, String outputFilePath, String watermarkText) {
+        logger.info("Calling python script");
         try {
-            // Command to execute the Python script
-            String command = String.format("python3 %s/src/main/resources/compressor.py %s %s", System.getProperty("user.dir"), inputFilePath, outputFilePath);
+//            URL scriptUrl = getClass().getClassLoader().getResource("compressor.py");
 
             // Execute the Python script
-            Process process = Runtime.getRuntime().exec(command);
-
-            // Reading the output from the Python script
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line;
-            while ((line = reader.readLine()) != null) {
-                logger.info(line);
+            ProcessBuilder processBuilder = new ProcessBuilder("python3", "/app/compressor.py", inputFilePath, outputFilePath, watermarkText);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
+            try (BufferedReader processOutputReader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String line;
+                while ((line = processOutputReader.readLine()) != null) {
+                    logger.info(line);
+                }
             }
-
-            // Wait for process to complete
             int exitCode = process.waitFor();
             if (exitCode == 0) {
-                logger.info("Python script executed successfully.");
+                logger.info("Python script executed successfully");
             } else {
-                logger.error("Python script execution failed.");
+                logger.error("Python script execution failed with exit code {}", exitCode);
             }
         } catch (Exception e) {
             logger.error("An error occurred while executing the Python script.", e);
